@@ -1,2 +1,0 @@
-prog: many-xpts
-vgopts: --time-unit=B --depth=100
